# roots

./: .gitignore  .prettierignore  .prettierrc  PLAN.md  README.md  SPEC.md  STYLEGUIDE.md  eslint.config.js  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml  lint.yml  release.yml
docs/: index.md  rules-feature-spec.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/connections/: index.md  jira.md  moco.md  outlook.md  personio.md
docs/desktop/: differences.md  index.md
docs/development/: api-clients.md  index.md  stores.md
docs/getting-started/: index.md  installation.md  quick-start.md
docs/guide/: index.md  settings.md  stats.md  timeline.md  timer.md
docs/superpowers/plans/: 2026-04-10-time-based-outlook-sync.md
docs/superpowers/specs/: 2026-04-10-time-based-outlook-sync-design.md
proxy/: package-lock.json  package.json  server.js
scripts/: release.js  sync-version.js
src/: App.svelte  app.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/api/: base-client.ts  index.ts  jira-cloud-worklog.ts  jira-server-worklog.ts  jira-worklog-client.ts  moco-client.ts  oauth-manager.ts  outlook-client.ts  personio-client.ts
src/lib/schemas/: jira.ts  moco.ts  outlook.ts  personio.ts
src/lib/services/: README.md  base-client.ts  index.ts  validate.ts
src/lib/stores/: absences.svelte.ts  autoRefresh.svelte.ts  (+25 more)
(+147 files in other folders)
